temp host shift changes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -86,7 +86,7 @@
 
         <input type="hidden" name="openid_identifier" value="https://id.cs50.net/"/>
 
-        <button type="submit" class="btn btn-default btn-danger btn-lg" id="harvardID">Log in with Harvard ID</button>
+        <button type="submit" class="btn btn-default btn-danger btn-lg" id="harvardID">Log in with Harvard PIN</button>
     </form>
 </div>
 <!--end of login with Harvard ID-->
