temp host shift changes

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -78,7 +78,7 @@
         <!--end of newsfeed-->
 
         <!--start of top voted questions-->
-        <div class="col-lg-4 col-md-3 col-sm-5">
+        <div class="col-lg-3 col-md-3 col-sm-5">
             <p>Top Voted Questions</p>
             <table class="table table-striped topQuestions">
 
@@ -140,7 +140,8 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <!-- loads jquery cookie plugin -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 <!-- customlogin javascript file: should be loaded after jquery-->
 <script type="text/javascript" src="chat.js"></script>
