Added ability to serve statis files using express.static middleware

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -16,7 +16,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="chat.css">
+    <link rel="stylesheet" href="css/chat.css">
 
 </head>
 <body>
@@ -159,6 +159,6 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
 <!-- customlogin javascript file: should be loaded after jquery-->
-<script type="text/javascript" src="chat.js"></script>
+<script type="text/javascript" src="js/chat.js"></script>
 </body>
 </html>
