--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -18,7 +18,7 @@
           href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="login.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/login.css" rel="stylesheet">
 
 </head>
 
@@ -208,6 +208,6 @@
         src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
 
 <!-- customlogin javascript file: should be loaded after jquery-->
-<script type="text/javascript" src="login.js"></script>
+<script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
