--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -179,6 +179,7 @@
         <!--the class navbar-btn styles the buttons for the nav-->
         <!--the class pull-right floats the buttons to the right-->
         <a class="navbar-btn btn btn-info btn-xs pull-right">Status: Development</a>
+        <a class="navbar-btn btn btn-info btn-xs pull-right">Shoot me an Email</a>
 
     </div>
 </div>
