--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,3 +8,11 @@ body {
 .displayName {
     color: cyan;
 }
+
+.jumbotron {
+    background-image: url(../imgs/widener1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    text-shadow: black 0.3em 0.3em 0.3em;
+}
