--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,10 +11,17 @@
 
     <!--google analytics-->
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-58209445-1', 'auto');
         ga('send', 'pageview');
@@ -81,20 +88,18 @@
 
         <!--column for newsfeed-->
         <div class="col-lg-7 col-md-8 col-sm-8 col-xs-12">
-
             <p>
                 <span>
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
                     Question Feed:
                 </span>
-                <span class="questionFeedDate">Date</span></p>
+                <span class="questionFeedDate">Date</span>
+            </p>
             <table class="table table-condensed table-striped question_feed">
 
             </table>
-
         </div>
         <!--end of newsfeed-->
-
 
         <!--start of top voted questions and online column-->
         <div class="col-lg-5 col-md-4 col-sm-4 col-xs-12">
