Improved mobile view by preventing buttons from pushing out of columns

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -88,13 +88,13 @@
 
         <!--column for newsfeed-->
         <div class="col-lg-7 col-md-8 col-sm-8 col-xs-12">
-            <p>
+            <h5>
                 <span>
-                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                     Question Feed:
-                </span>
-                <span class="questionFeedDate">Date</span>
-            </p>
+                </span><small>
+                <span class="questionFeedDate">Date</span></small>
+            </h5>
             <table class="table table-condensed table-striped question_feed">
 
             </table>
@@ -108,7 +108,7 @@
 
                 <!--start of top voted questions-->
                 <div class="col-lg-9 col-md-12 col-sm-12 col-xs-9">
-                    <p>Top Voted Questions</p>
+                    <h5>Top Voted Questions</h5>
                     <table class="table table-condensed table-striped topQuestions">
 
                     </table>
@@ -118,7 +118,7 @@
                 <!--start of online users-->
                 <div class="col-lg-3 col-md-5 col-sm-5 col-xs-3" style="text-align: center">
 
-                    <p>Online</p>
+                    <h5>Online</h5>
                     <table class="table table-condensed table-striped onlineUsers">
 
                     </table>
