--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -192,12 +192,22 @@
         <!--the class navbar-text makes sure that the text is correctly centerd in the navbar-->
         <!--the class pull-left floats the buttons to the left-->
         <p class="navbar-text pull-left">
-            Site Built By Jovin Mwilanga: &copy; 2015 Harvard University
+            Site Built By Jovin Mwilanga:
+            <a href="https://www.google.com/+JovinMwilanga" target="_blank">
+                <i class="fa fa-google-plus-square"></i>
+            </a>
+            <a href="https://twitter.com/jovinbm" target="_blank">
+                <i class="fa fa-twitter-square"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/jovinmwilanga/" target="_blank">
+                <i class="fa fa-linkedin-square"></i>
+            </a>
         </p>
 
         <!--the class navbar-btn styles the buttons for the nav-->
         <!--the class pull-right floats the buttons to the right-->
         <div class="pull-right">
+            &copy; 2015 Harvard University
             <a class="navbar-btn btn btn-warning btn-xs">Status: Development</a>
             <a href="#myModal" role="button" class="btn btn-info btn-xs" data-toggle="modal">Shoot Me an Email</a>
         </div>
