--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,3 +1,8 @@
+/*angular js*/
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
+
 html {
     font-size: 62.5%;
 }
