--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -35,38 +35,34 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="css/chat.css">
+    <link type="text/javascript" href="/bower_components/angular-loading-bar/build/loading-bar.css">
+    <link rel="stylesheet" href="/public/css/chat.css">
 
 </head>
 <body ng-controller="MainController">
 
 <!--start of nav-->
-
-<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
-<div class="navbar navbar-inverse navbar-static-top">
-
-    <!--'container' div makes sure our content is well centered on the screen-->
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> ClassName</a>
-
-        <!--button to target the navbar-right which will appear on collapse of navbar items-->
-        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
-
-            <!--create the breadcrumb-->
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-
-        </button>
+        <div class="navbar-header">
+            <!--button to target the navbar-right which will appear on collapse of navbar items-->
+            <button type="button" class='navbar-toggle collapsed' data-toggle="collapse"
+                    data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                HarvardClass
+            </a>
+        </div>
 
         <!--this navbar will be collapsed on mobile-->
         <div class="collapse navbar-collapse navHeaderCollapse">
-
             <ul class="nav navbar-nav navbar-right">
-                <!--the user profile dropdown-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        ID: <%= customUsername %> <b class="caret"></b>
+                        <%= customUsername %> <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
@@ -83,8 +79,14 @@
                         </li>
                     </ul>
                 </li>
-
             </ul>
+            <a type="button"
+               class="btn btn-primary navbar-btn pull-right"
+               href="#myModal"
+               role="button"
+               data-toggle="modal">
+                <i class="fa fa-pencil"></i> Ask a Question
+            </a>
         </div>
     </div>
 </div>
@@ -97,36 +99,52 @@
     <div class="row">
 
         <!--column for newsfeed-->
-        <div class="col-lg-7 col-md-8 col-sm-8 col-xs-12" ng-controller="QuestionFeedController">
+        <div class="col-lg-7 col-md-8 col-sm-8 col-xs-12 ng-cloak" ng-controller="QuestionFeedController">
             <h5>
                 <span>
                     <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                     Question Feed
                 </span>
+                <span class="hidden-sm hidden-md hidden-lg">
+                    <button type="button" class="btn btn-primary btn-xs pull-right">
+                        <a type="button"
+                           class="btn btn-primary btn-xs"
+                           href="#myModal"
+                           role="button"
+                           data-toggle="modal">
+                            <i class="fa fa-pencil"></i> Ask a Question
+                        </a>
+                    </button></span>
             </h5>
-            <table class="table table-condensed question_feed ng-cloak">
-                <tr ng-repeat="eachQuestion in questions"
-                    ng-class="questionReference[eachQuestion.questionIndex].questionClass">
-                    <td class='col-lg-1 col-md-1 col-sm-2 hidden-xs senderName'>
-                        {{eachQuestion.senderName}}
-                    </td>
-                    <td class='col-lg-10 col-md-10 col-sm-9 col-xs-11'>
-                        {{eachQuestion.question}}
-                        <br/>
-                        <small class="questionTime">
-                            {{questionReference[eachQuestion.questionIndex].questionTime}}
-                        </small>
-                    </td>
-                    <td class='col-lg-1 col-md-1 col-sm-1 col-xs-1' align='center'>
-                        <button type='button'
-                                ng-class="questionReference[eachQuestion.questionIndex].buttonClass"
-                                ng-disabled="questionReference[eachQuestion.questionIndex].ifDisabled"
-                                ng-click="upvote(eachQuestion.questionIndex, $event)">
-                            <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
-                        </button>
-                    </td>
-                </tr>
-            </table>
+
+
+            <div class="media" ng-repeat="eachQuestion in questions"
+                 ng-class="questionReference[eachQuestion.questionIndex].questionClass">
+                <a class="media-left media-top" href="#">
+                    <p class="userName">{{eachQuestion.senderName}}</p>
+                </a>
+
+                <div class="media-body">
+                    <h4 class="media-heading">{{eachQuestion.heading}}</h4>
+
+                    <p ta-bind ng-model="eachQuestion.question"></p>
+
+                    <small>{{questionReference[eachQuestion.questionIndex].questionTime}}</small>
+
+                    <button type='button'
+                            class="pull-right"
+                            ng-class="questionReference[eachQuestion.questionIndex].buttonClass"
+                            ng-disabled="questionReference[eachQuestion.questionIndex].ifDisabled"
+                            ng-click="upvote(eachQuestion.questionIndex, $event)">
+
+                        <span class='glyphicon glyphicon-thumbs-up' aria-hidden='true'></span>
+
+                    </button>
+
+                </div>
+
+            </div>
+
         </div>
         <!--end of newsfeed-->
 
@@ -134,25 +152,24 @@
         <div class="col-lg-5 col-md-4 col-sm-4 col-xs-12" ng-controller="TopVotedController">
 
             <div class="row">
-
                 <!--start of top voted questions-->
                 <div class="col-lg-9 col-md-12 col-sm-12 col-xs-9">
-                    <h5><i class="fa fa-line-chart"></i>  Trending</h5>
-                    <table class="table table-condensed topQuestions ng-cloak">
-                        <tr ng-repeat="eachTop in topVotedQuestions"
-                            ng-class="questionReference[eachTop.questionIndex].questionClass">
-                            <td class='col-lg-11 col-md-11 col-sm-10 col-xs-10'>
-                                {{eachTop.shortQuestion}}
-                            </td>
-                            <td class='col-lg-1 col-md-1 col-sm-2 col-xs-2' align='center'>
-                                <button type="button" ng-class="questionReference[eachTop.questionIndex].buttonClass"
-                                        ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
-                                        ng-click="upvote(eachTop.questionIndex, $event)">
-                                    <span class="voteNumber">{{eachTop.votes}}</span>
-                                </button>
-                            </td>
-                        </tr>
-                    </table>
+                    <h5><i class="fa fa-line-chart"></i> Trending</h5>
+                    <ul class="list-group" id="trending">
+                        <li class="list-group-item ng-cloak"
+                            ng-repeat="eachTop in topVotedQuestions"
+                            ng-class="[
+                            questionReference[eachTop.questionIndex].questionClass,
+                            questionReference[eachTop.questionIndex].listGroupClass
+                            ]"
+                            ng-disabled="questionReference[eachTop.questionIndex].ifDisabled"
+                            ng-click="upvote(eachTop.questionIndex, $event)">
+                            <span class="badge voteNumber">
+                                {{eachTop.votes}}
+                            </span>
+                            {{eachTop.heading}}
+                        </li>
+                    </ul>
                 </div>
                 <!--end of top voted questions-->
 
@@ -160,19 +177,18 @@
                 <div class="col-lg-3 col-md-5 col-sm-5 col-xs-3" style="text-align: center"
                      ng-controller="OnlineUsersController">
 
-                    <h5><i class="fa fa-users"></i>  Users</h5>
-                    <table class="table table-condensed onlineUsers ng-cloak">
+                    <h5><i class="fa fa-users"></i> Users</h5>
+                    <table class="table table-condensed ng-cloak" id="onlineUsers">
                         <tr ng-repeat="(key, value) in onlineUsers">
-                            <td class='onlineUser'><i class='fa fa-user'></i> {{value.customUsername}}</td>
+                            <td class='onlineUser userName'><i class='fa fa-user'></i> {{value.customUsername}}</td>
                         </tr>
                     </table>
                 </div>
+                <!--end of online users column-->
 
             </div>
 
         </div>
-        <!--end of online users column-->
-
     </div>
     <!--end of row-->
 
@@ -180,35 +196,107 @@
 <!--end of mid container-->
 
 
-<!--start of question input field-->
-<!--<div class="container navbar-fixed-bottom">-->
-<!--<div class="panel-footer" id="footerconst">-->
-<div class='navbar navbar-default navbar-fixed-bottom' ng-controller="AskController">
+<!--start of bottom nav-->
+<div class="nav navbar navbar-default navbar-fixed-bottom">
     <div class="container">
+        <p class="navbar-text pull-left hidden-xs">
+            <i class="fa fa-copyright"></i> 2015 harvardclass.herokuapp.com
+        </p>
+        <ul class="nav navbar-nav pull-right hidden-xs bottom-nav-pills">
+            <li>
+                <a href="#myModal"
+                   data-toggle="modal">
+                    <i class="fa fa-pencil"></i> Ask a Question
+                </a>
+            </li>
+            <li>
+                <a href="#trending">
+                    <i class="fa fa-line-chart"></i> Trending
+                </a>
+            </li>
+            <li>
+                <a href="#onlineUsers"><i class="fa fa-users"></i> Users
+                </a>
+            </li>
+        </ul>
 
-        <form ng-submit="ask()" name="askForm">
-            <textarea class="form-control"
-                      id="qfield"
-                      placeholder="Type your question"
-                      rows="3"
-                      ng-model="theQuestion"
-                      required></textarea>
-
-            <div class="pull-right">
-                <button class="navbar-btn btn btn-align btn-info"
-                        ng-disabled="askForm.$invalid">clarify?
-                </button>
-                <button class="navbar-btn btn btn-align btn-info"
-                        ng-disabled="askForm.$invalid">give an example?
-                </button>
-                <button class="navbar-btn btn btn-warning" type="submit"
-                        ng-disabled="askForm.$invalid">ASK
-                </button>
-            </div>
-        </form>
+        <ul class="nav nav-pills hidden-sm hidden-md hidden-lg bottom-nav-pills">
+            <li>
+                <a href="#myModal"
+                   data-toggle="modal">
+                    <i class="fa fa-pencil"></i> Ask a Question
+                </a>
+            </li>
+            <li>
+                <a href="#trending">
+                    <i class="fa fa-line-chart"></i> Trending
+                </a>
+            </li>
+            <li role="presentation">
+                <a href="#onlineUsers"><i class="fa fa-users"></i> Users
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
-<!--end of question input field-->
+<!--end of bottom nav-->
+
+
+<!--start of question input modal-->
+<div id="myModal"
+     class="modal fade"
+     tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel"
+     aria-hidden="true"
+     ng-controller="AskController">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="myModalLabel">Ask a new question</h3>
+            </div>
+
+            <div class="modal-body">
+                <form name="askForm">
+                    <div class="form-group">
+                        <label for="heading">Heading</label>
+                        <input class="form-control"
+                               id="heading"
+                               placeholder="Please type a brief heading (10 to 50 chars)"
+                               type="text"
+                               ng-model="theHeading"
+                               required
+                               ng-minlength="10"
+                               ng-maxlength="50">
+                    </div>
+                    <div class="form-group">
+                        <div text-angular
+                             ta-toolbar="[['p','pre','h5','h6'],['bold','italics','underline','quote'],['ul','ol','undo','redo','clear'],['justifyLeft','justifyRight','indent','outdent']]"
+                             ng-model="theQuestion"
+                             required
+                             placeholder="Your question here"></div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+                <button type="submit"
+                        class="btn btn-warning pull-right"
+                        ng-click="ask()"
+                        ng-disabled="askForm.$invalid"
+                        data-dismiss="modal">ASK
+                </button>
+                <button type="submit"
+                        class="btn btn-info pull-right"
+                        ng-disabled="askForm.$invalid"
+                        data-dismiss="modal">clarify?
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--end of question input modal-->
 
 
 <!-- JAVASCRIPT -->
@@ -219,8 +307,13 @@
 <!-- jQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<!--AngularJS script-->
+<!--AngularJS SCRIPTS-->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-animate.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-sanitize.min.js"></script>
+
 
 <!-- Bootstrap.js -->
 <script type="text/javascript"
@@ -229,8 +322,14 @@
 <!-- loads respond.js: enables responsive web designs in browsers that don't support CSS3 Media Queries - in particular, Internet Explorer 8 and under. -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 
-<script type="text/javascript" src="angular_assets/qaApp/mainApp.js"></script>
-<script type="text/javascript" src="angular_assets/qaApp/services.js"></script>
-<script type="text/javascript" src="angular_assets/qaApp/controllers.js"></script>
+<!--text angular-->
+<script src='http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular-sanitize.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.2/textAngular.min.js'></script>
+
+<script type="text/javascript" src="/public/js/chat.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/mainApp.js"></script>
+<script type="text/javascript" src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/services.js"></script>
+<script type="text/javascript" src="/public/angular_assets/qaApp/controllers.js"></script>
 </body>
 </html>
