--- a/views/login1.ejs
+++ b/views/login1.ejs
@@ -37,40 +37,34 @@
           href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
 
     <!-- loads custom css file -->
-    <link rel="stylesheet" href="css/login.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/css/login.css">
 
 </head>
 
 <body>
 
 <!--start of nav-->
-
-<!--the class static-top sticks nav bar at top, and fixed-top just fixes it at top-->
-<div class="navbar navbar-inverse navbar-static-top">
-
-    <!--'container' div makes sure our content is well centered on the screen-->
+<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-        <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> HarvardClass</a>
-
-        <!--button to target the navbar-right which will appear on collapse of navbar items-->
-        <button class='navbar-toggle' data-toggle="collapse" data-target=".navHeaderCollapse">
-
-            <!--create the breadcrumb-->
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-
-        </button>
+        <div class="navbar-header">
+            <!--button to target the navbar-right which will appear on collapse of navbar items-->
+            <button type="button" class='navbar-toggle collapsed' data-toggle="collapse"
+                    data-target=".navHeaderCollapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                HarvardClass
+            </a>
+        </div>
 
         <!--this navbar will be collapsed on mobile-->
         <div class="collapse navbar-collapse navHeaderCollapse">
-
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
                 <li><a href="https://my.harvard.edu" target="_blank">my.harvard.edu</a></li>
-                <li id='signInName'><a href="#">About</a></li>
-
-                <!--the user profile dropdown-->
+                <li><a href="https://canvas.harvard.edu/" target="_blank">Canvas</a></li>
+                <li><a href="#">About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <%= displayName %> <b class="caret"></b>
@@ -84,6 +78,7 @@
     </div>
 </div>
 <!--end of nav-->
+
 
 <!--start of jumbotron-->
 <div class='container'>
@@ -189,7 +184,7 @@
     <!--'container div makes sure of correct alignment-->
     <div class="container">
 
-        <!--the class navbar-text makes sure that the text is correctly centerd in the navbar-->
+        <!--the class navbar-text makes sure that the text is correctly centered in the navbar-->
         <!--the class pull-left floats the buttons to the left-->
         <p class="navbar-text pull-left">
             Site Built By Jovin Mwilanga:
@@ -223,7 +218,7 @@
                 <h3 id="myModalLabel">I'd Love to Hear From You</h3>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal col-sm-12 emailForm" method="post" action="/sendEmail">
+                <form class="emailForm" method="post" action="/sendEmail">
                     <div class="form-group"><label>Name</label><input class="form-control required"
                                                                       placeholder="Your name" data-placement="top"
                                                                       data-trigger="manual"
@@ -240,13 +235,11 @@
                                                                         data-content="Must be a valid e-mail address (user@gmail.com)"
                                                                         type="text" name="email"></div>
                     <div class="form-group">
+                        <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
                         <button type="submit" class="btn btn-success pull-right">Send It!</button>
                         <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not
                             valid. </p></div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
             </div>
         </div>
     </div>
@@ -277,9 +270,10 @@
         src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"></script>
 
 <!-- customlogin javascript file: should be loaded after jquery-->
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="/public/js/login.js"></script>
 
-<!--my custom javascript file with pluging-->
-<script type="text/javascript" src="js/custom_plugin.js"></script>
+<!--modal validator plugin-->
+<script type="text/javascript" src="/public/js/custom_plugin.js"></script>
+
 </body>
 </html>
