--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="qaApp">
-<head lang="en">
+<head>
 
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
     <meta name="description" content="Harvard Website to ask questions in class"/>
     <meta name="author" content="Jovin Mwilanga"/>
 
@@ -34,8 +35,10 @@
     <!--loads font awesome-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
+    <!--normalize.css-->
+    <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css"/>
+
     <!-- loads custom css file -->
-    <link type="text/javascript" href="/bower_components/angular-loading-bar/build/loading-bar.css">
     <link rel="stylesheet" href="/public/css/chat.css">
 
 </head>
