Included normalize.css

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -157,8 +157,8 @@
             <div class="row">
                 <!--start of top voted questions-->
                 <div class="col-lg-9 col-md-12 col-sm-12 col-xs-9">
-                    <h5><i class="fa fa-line-chart"></i> Trending</h5>
-                    <ul class="list-group" id="trending">
+                    <h5 id="trending"><i class="fa fa-line-chart"></i> Trending</h5>
+                    <ul class="list-group">
                         <li class="list-group-item ng-cloak"
                             ng-repeat="eachTop in topVotedQuestions"
                             ng-class="[
