Changed from Ask a new Question to New Question

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -88,7 +88,7 @@
                href="#myModal"
                role="button"
                data-toggle="modal">
-                <i class="fa fa-pencil"></i> Ask a Question
+                <i class="fa fa-pencil"></i> New Question
             </a>
         </div>
     </div>
@@ -209,7 +209,7 @@
             <li>
                 <a href="#myModal"
                    data-toggle="modal">
-                    <i class="fa fa-pencil"></i> Ask a Question
+                    <i class="fa fa-pencil"></i> New Question
                 </a>
             </li>
             <li>
@@ -227,7 +227,7 @@
             <li>
                 <a href="#myModal"
                    data-toggle="modal">
-                    <i class="fa fa-pencil"></i> Ask a Question
+                    <i class="fa fa-pencil"></i> New Question
                 </a>
             </li>
             <li>
