Added small tags to bottom nav

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -115,7 +115,7 @@
                            href="#myModal"
                            role="button"
                            data-toggle="modal">
-                            <i class="fa fa-pencil"></i> Ask a Question
+                            <i class="fa fa-pencil"></i> New Question
                         </a>
                     </button></span>
             </h5>
@@ -225,19 +225,19 @@
 
         <ul class="nav nav-pills hidden-sm hidden-md hidden-lg bottom-nav-pills">
             <li>
-                <a href="#myModal"
-                   data-toggle="modal">
-                    <i class="fa fa-pencil"></i> New Question
-                </a>
+                <small><a href="#myModal"
+                          data-toggle="modal">
+                        <i class="fa fa-pencil"></i> New Question
+                    </a></small>
             </li>
             <li>
-                <a href="#trending">
-                    <i class="fa fa-line-chart"></i> Trending
-                </a>
+                <small><a href="#trending">
+                        <i class="fa fa-line-chart"></i> Trending
+                    </a></small>
             </li>
             <li role="presentation">
-                <a href="#onlineUsers"><i class="fa fa-users"></i> Users
-                </a>
+                <small><a href="#onlineUsers"><i class="fa fa-users"></i> Users
+                    </a></small>
             </li>
         </ul>
     </div>
